--- a/Pipfile
+++ b/Pipfile
@@ -40,6 +40,7 @@ six = "==1.16.0"
 urllib3 = "==2.2.2"
 werkzeug = "==3.0.4"
 xmltodict = "==0.13.0"
+authorizer-demo = {file = ".", editable = true}
 
 [dev-packages]
 
